Centered header alignment, resolved hero, temp colorblocking for easier comparisons to original site.

--- a/styles.css
+++ b/styles.css
@@ -12,27 +12,29 @@ body, html {
 
 .header {
     position: relative;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    background-color: red;
     padding: 0;
     margin: 0;
-}
-
-.header__block {
     padding: 3rem 1.5rem;
     display: flex;
+}
+
+/* DO NAV LAST A/N - don't get stuck on it - go work on what you know 
+What's not working: space between*/
+.nav__block {
+    position: relative;
+    display: flex;
+    align-content: flex-start;
+    justify-content: space-between; /*why isn't this working??*/
+    background-color: #080c16;
     max-width: 1200px;
 }
-
-/* DO NAV LAST A/N - don't get stuck on it - go work on what you know */
-.nav__block {
-    display: flex;
-    align-content: center;
-    justify-content: space-between;
-    padding: 1rem 0;
-}
-
 .nav__logo {
     display: flex;
-    align-content: center;
+    align-items: center;
     margin-right: 2.5rem;
 }
 
@@ -42,12 +44,12 @@ body, html {
 
 .nav__list {
 display: flex;
-align-content: center;
 }
 
 .nav__list ul {
     list-style: none;
     display: flex;
+    align-items: center;
     gap: 4rem;
     justify-content: right;
     font-size: 1rem;
@@ -69,21 +71,40 @@ align-content: center;
     position:relative;
 }
 
-.hero {
+.hero__container{
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     text-align: center;
-    max-width: 1200px;
-    padding-bottom: 10px;
-    margin-bottom: 10px;
+    padding: 0px;
+    background-color: aqua;
 }
 
 .hero__content {
     max-width: 600px;
+    background-color: bisque;
 }
 
+.hero__content h1 {
+    margin: 0; 
+    font-size: 3.8rem;
+    font-weight:bold;
+    line-height: 95%;
+}
+
+.hero__content p {
+    font-size: 1.1rem;
+    line-height: 150%;
+}
+
+.hero__content p {
+    margin-bottom: 0;
+}
+
+.buiness__container ul li:before { /*checkbox image - but how*/
+font-size: 12px;
+}
 
 /* Apply to Review container:   something like border-bottom: 2px solid #d6dae5; */
 
